# cs6868_s26

./: README.md  help.txt  index.md  project_ideas.md  resources.md  schedule.md
assignments/assignment1_treelock/: notes.txt  temp.ml
assignments/assignment2_atomic_snapshot/: Bonus.ml  README.md  Snapshot.ml.atomic.bak  TSAN_REPORT.md  non_atomic_snapshot.ml  qcheck_lin_bounded.ml  qcheck_lin_lockfree.ml  qcheck_lin_snapshot.ml  qcheck_stm_lockfree.ml  qcheck_stm_snapshot.ml  temp.ml  tempCodeRunnerFile.ml  test_manual.ml
assignments/assignment3_batch_queue/: BatchQueue.ml  README.md  qcheck_lin_batch_queue.ml  qcheck_stm_batch_queue.ml  test_manual.ml
assignments/assignment4_mutex_condvar/: barrier.ml  condition.ml  mutex.ml  semaphore.ml  test_manual.ml
lectures/04_memory_consistency_models/code/: dune
lectures/07_linked_lists/code/benchmarks/: README.md  benchmark_lists.ml  dune  plot_results.py  run_benchmarks.sh
lectures/07_linked_lists/code/lib/: atomic_markable_ref.ml  atomic_markable_ref.mli  coarse_list.ml  coarse_list.mli  dune  fine_list.ml  fine_list.mli  lazy_list.ml  lazy_list.mli  lazy_list_racefree.ml  lazy_list_racefree.mli  lockfree_list.ml  lockfree_list.mli  optimistic_list.mli  optimistic_list_racefree.mli  query.txt  seq_list.mli
lectures/07_linked_lists/code/test/: dune  qcheck_lin_coarse_list.ml  qcheck_lin_fine_list.ml  qcheck_lin_lazy_list.ml  qcheck_lin_lockfree_list.ml  qcheck_lin_optimistic_list.ml  qcheck_stm_coarse_list.ml  qcheck_stm_fine_list.ml  qcheck_stm_lazy_list.ml  qcheck_stm_lockfree_list.ml  qcheck_stm_optimistic_list.ml  test_coarse_list.ml  test_fine_list.ml  test_lazy_list.ml  test_lazy_list_racefree.ml  test_lockfree_list.ml  test_optimistic_list.ml  test_optimistic_list_racefree.ml  test_seq_list.ml
lectures/08_queues_and_stacks/: 08_queues_and_stacks.key
lectures/08_queues_and_stacks/code/: value_representation_with_obj.ml
lectures/08_queues_and_stacks/code/lib/: bounded_queue.ml  bounded_queue.mli  bounded_queue_split_counter.ml  bounded_queue_split_counter.mli  lockfree_stack.mli
lectures/08_queues_and_stacks/code/test/: qcheck_lin_bounded_queue.ml  qcheck_lin_bounded_queue_split_counter.ml  qcheck_lin_lockfree_stack.ml  qcheck_stm_bounded_queue.ml  qcheck_stm_bounded_queue_split_counter.ml  qcheck_stm_lockfree_stack.ml  test_bounded_queue.ml  test_bounded_queue_split_counter.ml  test_lockfree_stack.ml
lectures/09_effect_handlers/: 09_effect_handlers.key
lectures/09_effect_handlers/code/basic/: dune  generator.ml  state.ml  test1.ml  test4.ml  test4_2.ml  test6.ml
lectures/09_effect_handlers/code/golike_multicore/: chan.ml
lectures/09_effect_handlers/code/tests/golike_multicore/: chan_test.ml
lectures/10_lightweight_concurrency/: 10_lightweight_concurrency.key  async_io_lecture_plan.md
lectures/10_lightweight_concurrency/code/golike_multicore/: chan.ml  chan.mli  dune  ivar_locked.ml  ivar_locked.mli  ivar_lockfree.ml  ivar_lockfree.mli  promise.ml  promise.mli  sched.ml  trigger.mli
lectures/10_lightweight_concurrency/code/golike_multicore_select/: chan.ml  chan.mli  dune  io.ml  io.mli  ivar.ml  ivar.mli  promise.mli  sched.mli  select.ml  select.mli  trigger.ml
lectures/10_lightweight_concurrency/code/golike_unicore/: chan.ml  promise.mli  sched.ml
lectures/10_lightweight_concurrency/code/golike_unicore_select/: chan.ml  chan.mli  ivar.ml  ivar.mli  select.mli
lectures/10_lightweight_concurrency/code/tests/golike_multicore/: chan_test.ml  dune  fib.ml  fib_cutoff_bench.ml  ivar_bench.ml  plot_cutoff.py  promise_test.ml  qsort.ml  qsort_bench.ml  sieve_test.ml
lectures/10_lightweight_concurrency/code/tests/golike_multicore_select/: accept_test.ml  async_io_demo.ml  async_io_sleep_demo.ml  blocking_io_demo.ml  dune  echo_server.ml  echo_server_test.ml  fanin_test.ml  fib_test.ml  io_direct_test.ml  io_readable_test.ml  select_blocks_test.ml  select_buffer_test.ml  select_ivar_test.ml  select_multi_round_test.ml  select_one_ready_test.ml  select_recv_timeout_test.ml  select_same_chan_recv_test.ml  select_same_chan_send_test.ml  select_second_ready_test.ml  select_send_test.ml  select_stress_test.ml  select_test.ml  select_timeout_test.ml  sieve_test.ml  test_sleep.ml  timeout_loop_test.ml
lectures/10_lightweight_concurrency/code/tests/golike_unicore/: chan_test.ml  dune  promise_test.ml  sieve_test.ml
lectures/10_lightweight_concurrency/code/tests/golike_unicore_select/: dune  fib_test.ml  select_test.ml  sieve_test.ml
lectures/11_oxcaml/: .gitignore  11_oxcaml.key  README.md  handout.md  test_handout.sh
lectures/11_oxcaml/code/01_modes_basics/: dune  gensym_atomic_portable.ml  modes_demo.ml
lectures/11_oxcaml/code/02_stack_alloc/: dune  local_regions.ml  part1_path_length_alloc_fail.ml  part1_polyline.ml  stack_alloc.ml
lectures/11_oxcaml/code/03_portability/: dune
lectures/11_oxcaml/code/04_unboxed/: dune  unboxed_demo.ml
lectures/11_oxcaml/code/05_zero_alloc/: dune  zero_alloc_demo.ml
lectures/11_oxcaml/code/06_fork_join/: dune  fib_parallel.ml  map_reduce.ml
lectures/11_oxcaml/code/07_gensym_atomics/: dune  gensym_atomics.ml
lectures/11_oxcaml/code/08_capsules/: capsules_demo.ml  dune
lectures/11_oxcaml/code/09_parallel_quicksort/: dune  quicksort.ml
lectures/11_oxcaml/code/10_parallel_arrays/: comprehensions.ml  dot_product.ml  dune
