(executable
 (name cse)
 (libraries unix)
 (modes exe)
 (ocamlopt_flags (:standard -S -O3)))

; Requires OCaml compiler with TSAN support
; Install with: opam switch create 5.4.0+tsan ocaml-variants.5.4.0+options ocaml-option-tsan
(executable
 (name peterson_race)
 (libraries unix)
 (modes exe)
 (flags (:standard -g))
 (ocamlopt_flags (:standard -g)))

; Fixed version using atomic operations
(executable
 (name peterson_race_fixed)
 (libraries unix)
 (modes exe)
 (flags (:standard -g))
 (ocamlopt_flags (:standard -g)))
