(executables
 (names modes_demo)
 (modules modes_demo)
 (ocamlopt_flags (:standard -extension-universe alpha)))

; gensym_atomic_portable: built so we can verify it actually compiles.
; Uses the [portable] library's Portable.Atomic, which mode-crosses
; both contention and portability.
(executable
 (name gensym_atomic_portable)
 (modules gensym_atomic_portable)
 (libraries portable)
 (ocamlopt_flags (:standard -extension-universe alpha)))

; gensym_unsafe.ml and gensym_atomic.ml are intentionally rejected by
; the type checker (used to demo Domain.Safe.spawn rejecting nonportable
; closures); they are excluded from the build via (modules) above.
